# Selenium-browser

./: README.md  pyproject.toml  setup.cfg
browser/: webscraper.py
labs/: Yahoo.ipynb
