[metadata]
name = browser_selenuim
version = 0.0.1
author = Atie Dag
author_email = atiedag@gmail.com
description = For web browsing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atiedag/browser_selenuim
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True